--- a/UIU/frontend/public/index.html
+++ b/UIU/frontend/public/index.html
@@ -25,6 +25,35 @@
   <title>React App</title>
 
   <script>
+    window.originalSetTimeout = window.setTimeout;
+    window.originalClearTimeout = window.clearTimeout;
+    window.activeTimers = 0;
+
+    window.setTimeout = function (func, delay) {
+      window.activeTimers++;
+      return window.originalSetTimeout(func, delay);
+    };
+
+    window.clearTimeout = function (timerID) {
+      window.activeTimers--;
+      window.originalClearTimeout(timerID);
+    };
+
+
+    window.originalSetInterval = window.setInterval;
+    window.originalClearInterval = window.clearInterval;
+    window.activeIntervals = 0;
+
+    window.setInterval = function (func, delay) {
+      window.activeIntervals++;
+      return window.originalSetInterval(func, delay);
+    };
+
+    window.clearInterval = function (timerID) {
+      window.activeIntervals--;
+      window.originalClearInterval(timerID);
+    };
+
     window.uiu = {
       api: {},
       _returnValues: {},
